# py-default-repo

./: .gitignore  .pre-commit-config.yaml  COMMIT_GUIDELINES.md  Makefile  README.md  config.mk  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
docs/: py-clean-arch.md
src/: __init__.py  main.py
src/common/: __init__.py  constypes.py  erros.py  logger.py  utils.py
src/config/: config.yaml  schema.json
src/constants/: __init__.py  constants.py
src/core/: constants.py  logger.py  utils.py
src/enums/: __init__.py  base_enum.py
src/infrastructure/: __init__.py
src/repositories/: __init__.py
tests/: __init__.py  test_logger.py
tools/: commit.txt  template_commit.txt
