[project]
name = "py-default-repo"
version = "0.1.0"
description = ""
authors = [
    { name = "Raphael Coelho", email = "raphael.phael@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

dependencies = [
    "PyYaml==6.0.1",
]

[tool.poetry]
requires-poetry = ">=2.0.1"
packages = [
    { include = "./src" }
]

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.3"
pytest = "^8.3.4"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
pyright = "^1.1.392.post0"
types-pyyaml = "^6.0.12.20241230"
pytest-cov = "^6.0.0"

[tool.pylint]
disable = [
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
    "unused-argument", # Remover quando for corrigido
    "unused-import" # Remover quando for corrigido
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--junit-xml=htmlcov/report.xml --no-cov-on-fail --cov-report term-missing:skip-covered --cov-fail-under=50"

[project.scripts]
main = "src.main:main"

[project.urls]
repository = "https://github.com/pagueru/py-default-repo"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
